// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a single image if an id is given 1`] = `
<div>
  <img
    className="image"
    src="/admin/media/redirect/media/3?locale=en&format=sulu-50x50"
  />
  <img
    className="image"
    src="/admin/media/redirect/media/7?locale=en&format=sulu-50x50"
  />
</div>
`;

exports[`Render nothing if a wrong type of value is given 1`] = `null`;

exports[`Render nothing if no id is given 1`] = `null`;

exports[`Render only eight images if more are given if an id is given 1`] = `
<div>
  <img
    className="image"
    src="/admin/media/redirect/media/3?locale=en&format=sulu-50x50"
  />
  <img
    className="image"
    src="/admin/media/redirect/media/7?locale=en&format=sulu-50x50"
  />
  <img
    className="image"
    src="/admin/media/redirect/media/9?locale=en&format=sulu-50x50"
  />
  <img
    className="image"
    src="/admin/media/redirect/media/11?locale=en&format=sulu-50x50"
  />
  <img
    className="image"
    src="/admin/media/redirect/media/13?locale=en&format=sulu-50x50"
  />
  <img
    className="image"
    src="/admin/media/redirect/media/2?locale=en&format=sulu-50x50"
  />
  <img
    className="image"
    src="/admin/media/redirect/media/1?locale=en&format=sulu-50x50"
  />
  <img
    className="image"
    src="/admin/media/redirect/media/4?locale=en&format=sulu-50x50"
  />
</div>
`;
